tests/paczka1/small_fuzzy/20186053.err
Error in line 2: daXqu S177 31,0
Error in line 5: daXqu A275 61,5
